--- a/src/app/viz2/viz2.component.html
+++ b/src/app/viz2/viz2.component.html
@@ -1,18 +1,23 @@
+{{selection}}
+
 <div>
   <div class="col-md-2 col-sm-12">
-    <div id="popslider3" ></div>
-    <div id="popslider4" ></div>
+    <div id="sales_slider" ></div>
+    <div id="profit_slider" ></div>
   </div>
-  <div class="col-md-10 col-sm-12">
-      <div id="facet1"> </div>
+  <div class="col-md-5 col-sm-12">
+      <div id="map"> </div>
   </div>
+  <div class="col-md-5 col-sm-12">
+    <div id="barchart"> </div>
+</div>
 </div>
 
 <div>
   <div class="col-md-4 col-sm-12">
-    <div id="weatherSelect"> </div>
+    <div id="scatterplot"> </div>
   </div>
   <div class="col-md-4 col-sm-12">
-    <div id="popupview"> </div>
+    <div id="linechart"> </div>
   </div>
 </div>
