--- a/src/app/viz2/viz2.component.html
+++ b/src/app/viz2/viz2.component.html
@@ -1,3 +1,6 @@
+<div class="col-md-6 col-sm-6" id="sales_slider"></div>
+<div class="col-md-6 col-sm-6" id="profit_slider"></div>
+
 <div>
   <div class="col-md-6 col-sm-6">
     <div id="map"> </div>
@@ -57,3 +60,6 @@
 
 <div class="hidden" id="randomVar"></div>
 <div class="hidden" id="updateRandomVar"></div>
+
+<div class="hidden" id="sliderCss"></div>
+<div class="hidden" id="createSlider"></div>
