--- a/src/app/viz2/viz2.component.css
+++ b/src/app/viz2/viz2.component.css
@@ -2,3 +2,40 @@
     visibility: hidden;
     display: inline;
 }
+
+.dashboard {
+    background-color: #fff;
+    position: relative;
+    height: 90vh;
+    width: 100%
+}
+
+#dashboardContainer {
+    height: 500px;
+    overflow: auto;
+}
+
+body > app-root > div > app-barchart > div > div > div > div > div > span {
+    display: none;
+}
+
+.hidden {
+    visibility: hidden;
+    display: inline;
+}
+
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.svg-content {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 0;
+}
