--- a/src/app/viz2/viz2.component.html
+++ b/src/app/viz2/viz2.component.html
@@ -1,65 +1,67 @@
-<div class="col-md-6 col-sm-6" id="sales_slider"></div>
-<div class="col-md-6 col-sm-6" id="profit_slider"></div>
+<div class="container dashboard">
+  <div class="col-md-6 col-sm-6" id="sales_slider"></div>
+  <div class="col-md-6 col-sm-6" id="profit_slider"></div>
 
-<div>
-  <div class="col-md-6 col-sm-6">
-    <div id="map"> </div>
+  <div>
+    <div class="col-md-6 col-sm-6">
+      <div id="map"> </div>
+    </div>
+    <div class="col-md-6 col-sm-6">
+      <div id="barchart"> </div>
+    </div>
   </div>
-  <div class="col-md-6 col-sm-6">
-    <div id="barchart"> </div>
+
+  <div>
+    <div class="col-md-6 col-sm-12">
+      <div id="scatterplot"> </div>
+    </div>
+    <div class="col-md-6 col-sm-12">
+      <div id="linechart"> </div>
+    </div>
   </div>
+
+  <div class="hidden" id="barSelectionFurniture"></div>
+  <div class="hidden" id="barSelectionTechnology"></div>
+  <div class="hidden" id="barSelectionOfficeSupplies"></div>
+
+  <div class="hidden" id="stateSelection"></div>
+  <div class="hidden" id="scatterLeftIntervalSelection"></div>
+  <div class="hidden" id="lineSelection"></div>
+
+  <div class="hidden" id="selected_subcategories"></div>
+  <div class="hidden" id="selected_categories"></div>
+  <div class="hidden" id="selected_regions"></div>
+
+  <div class="hidden" id="furnitureSelected"></div>
+  <div class="hidden" id="furnitureRegions"></div>
+  <div class="hidden" id="furnitureSubcategories"></div>
+
+  <div class="hidden" id="technologySelected"></div>
+  <div class="hidden" id="technologyRegions"></div>
+  <div class="hidden" id="technologySubcategories"></div>
+
+  <div class="hidden" id="officeSuppliesSelected"></div>
+  <div class="hidden" id="officeSuppliesRegions"></div>
+  <div class="hidden" id="officeSuppliesSubcategories"></div>
+
+  <div class="hidden" id="selected_states"></div>
+  <div class="hidden" id="selected_customers_left"></div>
+  <div class="hidden" id="selected_dates"></div>
+
+  <div class="hidden" id="ss"></div>
+  <div class="hidden" id="createCrossfilter"></div>
+  <div class="hidden" id="dataStructure"></div>
+  <div class="hidden" id="filterGroupByDimensions"></div>
+
+  <div class="hidden" id="cat_subcat_region_view"></div>
+  <div class="hidden" id="customer_id_group_view_left"></div>
+  <div class="hidden" id="customer_id_group_view_right"></div>
+  <div class="hidden" id="state_group_view"></div>
+  <div class="hidden" id="order_date_group_view"></div>
+
+  <div class="hidden" id="randomVar"></div>
+  <div class="hidden" id="updateRandomVar"></div>
+
+  <div class="hidden" id="sliderCss"></div>
+  <div class="hidden" id="createSlider"></div>
 </div>
-
-<div>
-  <div class="col-md-6 col-sm-12">
-    <div id="scatterplot"> </div>
-  </div>
-  <div class="col-md-6 col-sm-12">
-    <div id="linechart"> </div>
-  </div>
-</div>
-
-<div class="hidden" id="barSelectionFurniture"></div>
-<div class="hidden" id="barSelectionTechnology"></div>
-<div class="hidden" id="barSelectionOfficeSupplies"></div>
-
-<div class="hidden" id="stateSelection"></div>
-<div class="hidden" id="scatterLeftIntervalSelection"></div>
-<div class="hidden" id="lineSelection"></div>
-
-<div class="hidden" id="selected_subcategories"></div>
-<div class="hidden" id="selected_categories"></div>
-<div class="hidden" id="selected_regions"></div>
-
-<div class="hidden" id="furnitureSelected"></div>
-<div class="hidden" id="furnitureRegions"></div>
-<div class="hidden" id="furnitureSubcategories"></div>
-
-<div class="hidden" id="technologySelected"></div>
-<div class="hidden" id="technologyRegions"></div>
-<div class="hidden" id="technologySubcategories"></div>
-
-<div class="hidden" id="officeSuppliesSelected"></div>
-<div class="hidden" id="officeSuppliesRegions"></div>
-<div class="hidden" id="officeSuppliesSubcategories"></div>
-
-<div class="hidden" id="selected_states"></div>
-<div class="hidden" id="selected_customers_left"></div>
-<div class="hidden" id="selected_dates"></div>
-
-<div class="hidden" id="ss"></div>
-<div class="hidden" id="createCrossfilter"></div>
-<div class="hidden" id="dataStructure"></div>
-<div class="hidden" id="filterGroupByDimensions"></div>
-
-<div class="hidden" id="cat_subcat_region_view"></div>
-<div class="hidden" id="customer_id_group_view_left"></div>
-<div class="hidden" id="customer_id_group_view_right"></div>
-<div class="hidden" id="state_group_view"></div>
-<div class="hidden" id="order_date_group_view"></div>
-
-<div class="hidden" id="randomVar"></div>
-<div class="hidden" id="updateRandomVar"></div>
-
-<div class="hidden" id="sliderCss"></div>
-<div class="hidden" id="createSlider"></div>
