fully functional dashboard

--- a/src/app/viz2/viz2.component.html
+++ b/src/app/viz2/viz2.component.html
@@ -1,5 +1,14 @@
+<div class="col-md-6 col-sm-6" id="button"></div>
+<div class="col-md-6 col-sm-6" id="applyButton"></div>
 <div class="col-md-6 col-sm-6" id="sales_slider"></div>
 <div class="col-md-6 col-sm-6" id="profit_slider"></div>
+<div class="col-md-6 col-sm-6" id="start_date"></div>  
+<div class="col-md-6 col-sm-6" id="end_date"></div>  
+
+
+<!-- 
+
+-->
 
 <div>
   <div class="col-md-6 col-sm-6">
@@ -19,47 +28,60 @@
   </div>
 </div>
 
-<div class="hidden" id="barSelectionFurniture"></div>
-<div class="hidden" id="barSelectionTechnology"></div>
-<div class="hidden" id="barSelectionOfficeSupplies"></div>
-
-<div class="hidden" id="stateSelection"></div>
-<div class="hidden" id="scatterLeftIntervalSelection"></div>
-<div class="hidden" id="lineSelection"></div>
-
-<div class="hidden" id="selected_subcategories"></div>
-<div class="hidden" id="selected_categories"></div>
-<div class="hidden" id="selected_regions"></div>
-
-<div class="hidden" id="furnitureSelected"></div>
-<div class="hidden" id="furnitureRegions"></div>
-<div class="hidden" id="furnitureSubcategories"></div>
-
-<div class="hidden" id="technologySelected"></div>
-<div class="hidden" id="technologyRegions"></div>
-<div class="hidden" id="technologySubcategories"></div>
-
-<div class="hidden" id="officeSuppliesSelected"></div>
-<div class="hidden" id="officeSuppliesRegions"></div>
-<div class="hidden" id="officeSuppliesSubcategories"></div>
-
-<div class="hidden" id="selected_states"></div>
-<div class="hidden" id="selected_customers_left"></div>
-<div class="hidden" id="selected_dates"></div>
-
-<div class="hidden" id="ss"></div>
+<!-- appendix -->
 <div class="hidden" id="createCrossfilter"></div>
-<div class="hidden" id="dataStructure"></div>
-<div class="hidden" id="filterGroupByDimensions"></div>
+<div class="hidden" id="filterState"></div>
 
-<div class="hidden" id="cat_subcat_region_view"></div>
-<div class="hidden" id="customer_id_group_view_left"></div>
-<div class="hidden" id="customer_id_group_view_right"></div>
-<div class="hidden" id="state_group_view"></div>
-<div class="hidden" id="order_date_group_view"></div>
+<!-- crossfilter -->
+<div class="hidden" id="catSubcatRegionCrossfilter"></div>
+<div class="hidden" id="customerIdCrossfilter"></div>
+<div class="hidden" id="orderDateCrossfilter"></div>
+<div class="hidden" id="orderDateOverviewCrossfilter"></div>
+<div class="hidden" id="stateIdCrossfilter"></div>
 
-<div class="hidden" id="randomVar"></div>
-<div class="hidden" id="updateRandomVar"></div>
+<!-- data -->
+<div class="hidden" id="cat_subcat_region_data"></div>
+<div class="hidden" id="customer_id_group_data"></div>
+<div class="hidden" id="order_date_group_data"></div>
+<div class="hidden" id="order_date_group_data_overview"></div>
+<div class="hidden" id="state_id_date_group_data"></div>
+<div class="hidden" id="superstore"></div>
 
+<!-- selections -->
+<div class="hidden" id="flag_furniture_selected"></div>
+<div class="hidden" id="flag_office_supplies_selected"></div>
+<div class="hidden" id="flag_technology_selected"></div>
+<div class="hidden" id="selected_categories"></div>
+<div class="hidden" id="selected_categories_pre"></div>
+<div class="hidden" id="selected_customers"></div>
+<div class="hidden" id="selected_customers_pre"></div>
+<div class="hidden" id="selected_dates"></div>
+<div class="hidden" id="selected_date_range"></div>
+<div class="hidden" id="selected_dates_pre"></div>
+<div class="hidden" id="selected_regions_pre"></div>
+<div class="hidden" id="selected_regions"></div>
+<div class="hidden" id="selected_regions_furniture"></div>
+<div class="hidden" id="selected_regions_office_supplies"></div>
+<div class="hidden" id="selected_regions_technology"></div>
+<div class="hidden" id="selected_state_ids"></div>
+<div class="hidden" id="selected_state_ids_pre"></div>
+<div class="hidden" id="selected_subcategories"></div>
+<div class="hidden" id="selected_subcategories_pre"></div>
+<div class="hidden" id="selected_subcategories_furniture"></div>
+<div class="hidden" id="selected_subcategories_office_supplies"></div>
+<div class="hidden" id="selected_subcategories_technology"></div>
+
+<!-- signals -->
+<div class="hidden" id="signal_bar_furniture"></div>
+<div class="hidden" id="signal_bar_office_supplies"></div>
+<div class="hidden" id="signal_bar_technology"></div>
+<div class="hidden" id="signal_line"></div>
+<div class="hidden" id="signal_map"></div>
+<div class="hidden" id="signal_scatter"></div>
+
+<!-- utilities -->
 <div class="hidden" id="sliderCss"></div>
 <div class="hidden" id="createSlider"></div>
+<div class="hidden" id="date"></div>
+<div class="hidden" id="input"></div>
+<div class="hidden" id="log"></div>
