looks like a dashboard

--- a/src/app/viz2/viz2.component.html
+++ b/src/app/viz2/viz2.component.html
@@ -1,27 +1,35 @@
-<div class="col-md-6 col-sm-6" id="button"></div>
-<div class="col-md-6 col-sm-6" id="applyButton"></div>
-<div class="col-md-6 col-sm-6" id="sales_slider"></div>
-<div class="col-md-6 col-sm-6" id="profit_slider"></div>
-<div class="col-md-6 col-sm-6" id="start_date"></div>
-<div class="col-md-6 col-sm-6" id="end_date"></div>
-
-<div>
-  <div class="col-md-6 col-sm-6">
-    <div id="map"> </div>
-  </div>
-  <div class="col-md-6 col-sm-6">
-    <div id="barchart"> </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-10">
+      <div class="row">
+        <div class="col-xs-6">
+          <div id="barchart"> </div>
+        </div>
+        <div class="col-xs-6">
+          <div id="linechart"> </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-6">
+          <div id="scatterplot"> </div>
+        </div>
+        <div class="col-xs-6">
+          <div id="map"> </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="col-md-12 col-sm-12" id="button"></div>
+      <div class="col-md-12 col-sm-12" id="applyButton"></div>
+      <div class="col-md-12 col-sm-12" id="sales_slider"></div>
+      <div class="col-md-12 col-sm-12" id="profit_slider"></div>
+      <div class="col-md-12 col-sm-12" id="start_date"></div>
+      <div class="col-md-12 col-sm-12" id="end_date"></div>
+    </div>
   </div>
 </div>
 
-<div>
-  <div class="col-md-6 col-sm-12">
-    <div id="scatterplot"> </div>
-  </div>
-  <div class="col-md-6 col-sm-12">
-    <div id="linechart"> </div>
-  </div>
-</div>
+
 
 <!-- appendix -->
 <div class="hidden" id="createCrossfilter"></div>
