done, don't know if Andrew will have the time to look at it

--- a/src/app/viz2/viz2.component.html
+++ b/src/app/viz2/viz2.component.html
@@ -25,6 +25,10 @@
       <div class="col-md-12 col-sm-12" id="profit_slider"></div>
       <div class="col-md-12 col-sm-12" id="start_date"></div>
       <div class="col-md-12 col-sm-12" id="end_date"></div>
+      <div class="col-md-12 col-sm-12" id="">
+        <p>Current filters below:</p>
+      </div>
+      <div class="col-md-12 col-sm-12" id="filterState"></div>
     </div>
   </div>
 </div>
@@ -33,7 +37,7 @@
 
 <!-- appendix -->
 <div class="hidden" id="createCrossfilter"></div>
-<div class="hidden" id="filterState"></div>
+
 
 <!-- crossfilter -->
 <div class="hidden" id="catSubcatRegionCrossfilter"></div>
